--- a/program.html
+++ b/program.html
@@ -9,7 +9,7 @@
 
 <body>
     <script>
-        console.log('Goodbye World!')
+        console.log('Goodbye WWorld!')
         console.log(4 + 4 * 4)
     </script>
 </body>
