--- a/program.html
+++ b/program.html
@@ -9,8 +9,12 @@
 
 <body>
     <script>
-        console.log('Goodbye WWorld!')
-        console.log(4 + 4 * 4)
+        console.log('Goodbye World!');
+        var value1 = 4;
+        var value2 = 5;
+        var value3 = 1;
+        console.log(value3 + value2 * value1);
+        console.log(value1 + value2 - value3);
     </script>
 </body>
 
