--- a/program.html
+++ b/program.html
@@ -9,12 +9,22 @@
 
 <body>
     <script>
-        console.log('Goodbye World!');
-        var value1 = 4;
-        var value2 = 5;
-        var value3 = 1;
-        console.log(value3 + value2 * value1);
-        console.log(value1 + value2 - value3);
+        var name = 'Nanonauts!';
+        var message = ' I cant belive how good they are';
+        console.log(name + message);
+       /* console.log('Goodbye World!');
+          var value1 = 4;
+          var value2 = 5;
+          var value3 = 1;
+          console.log(value3 + value2 * value1);
+          value3 = 10;
+          console.log(value3 + value2 * value1);
+          console.log(value1 + value2 - value3);
+          var value4 = 5;
+          var value5 = value4 + 1;
+          value4 = 4;
+          console.log(value5);
+          console.log(value4);*/
     </script>
 </body>
 
