--- a/program.html
+++ b/program.html
@@ -9,32 +9,60 @@
 
 <body>
     <script>
-        var canvas = document.createElement('canvas')
-        canvas.width = 800;
-        canvas.height = 600;
-        document.body.appendChild(canvas);
+
+        //CONSTANTS
+        var CANVAS_WIDTH = 800;
+        var CANVAS_HIEGHT = 600;
+        var PLAYER_WIDTH = 181;
+        var PLAYER_HEIGHT = 229
+        var GROUND_Y = 540;
+
+        //SETUP
+        var canvas = document.createElement('canvas');
         var c = canvas.getContext('2d');
-        function start() {
-            c.fillStyle = 'blue';
-            c.fillRect(40, 40, 10, 10);
-        }
+        canvas.width = CANVAS_WIDTH;
+        canvas.height = CANVAS_HIEGHT;
         document.body.appendChild(canvas);
-          /*var name = 'Nanonauts!';
-var message = ' I cant belive how good they are';
-console.log(name + message);
-console.log('Goodbye World!');
-var value1 = 4;
-var value2 = 5;
-var value3 = 1;
-console.log(value3 + value2 * value1);
-value3 = 10;
-console.log(value3 + value2 * value1);
-console.log(value1 + value2 - value3);
-var value4 = 5;
-var value5 = value4 + 1;
-value4 = 4;
-console.log(value5);
-console.log(value4);*/
+
+        var playerImage = new Image();
+        playerImage.src = 'Nanonaut.png';
+
+        var playerX = 50;
+        var playerY = 40;
+
+        window.addEventListener('load', start);
+
+        function start() {
+            window.requestAnimationFrame(mainLoop);
+        }
+
+        //MAIN LOOP
+        function mainLoop() {
+            update();
+            draw();
+            window.requestAnimationFrame(mainLoop);
+        }
+
+        //PLAYER INPUT
+
+        //UPDAING
+        function update() {
+
+        }
+
+        //DRAWING
+        function draw() {
+            //Da sky
+            c.fillStyle = 'LightSkyBlue';
+            c.fillRect(0, 0, CANVAS_WIDTH, GROUND_Y - 40);
+
+            //Da ground
+            c.fillStyle = 'ForestGreen';
+            c.fillRect(0, GROUND_Y - 40, CANVAS_WIDTH, CANVAS_HIEGHT - GROUND_Y + 40);
+
+            c.drawImage(playerImage, playerX, playerY);
+        }
+
     </script>
 </body>
 
