--- a/program.html
+++ b/program.html
@@ -53,6 +53,8 @@
             update();
             draw();
             window.requestAnimationFrame(mainLoop);
+
+            // setTimeout(mainLoop, 1000);
         }
 
         //PLAYER INPUT
@@ -69,31 +71,24 @@
 
         //UPDAING
         function update() {
+            //jump for mr Nano.
+            if (spaceKeyIsPressed && !playerIsInTheAir) {
+                playerYSpeed = - PLAYER_JUMP_SPEED;
+                playerIsInTheAir = true;
+                console.log('hello world');
+            }
             //gravity for mr. Nano
             playerY = playerY + playerYSpeed;
-            playerYSpeed = playerYSpeed + PLAYER_Y_ACCELERATION;
+            console.log('playerY', playerY);
 
-            //jump for mr Nano.
-            if (spaceKeyIsPressed) {
-                playerYSpeed = -PLAYER_JUMP_SPEED;
-            }
+            playerYSpeed = playerYSpeed + PLAYER_Y_ACCELERATION;
 
             if (playerY > (GROUND_Y - PLAYER_HEIGHT)) {
                 playerY = GROUND_Y - PLAYER_HEIGHT;
                 playerYSpeed = 0;
-            }
-
-            if (spaceKeyIsPressed && !playerIsInTheAir) {
-                playerYSpeed = -PLAYER_JUMP_SPEED;
-                playerIsInTheAir = true;
-            }
-
-            (playerY > (GROUND_Y - PLAYER_HEIGHT)); {
-                playerY = GROUND_Y - PLAYER_HEIGHT;
-                playerYSpeed = 0;
                 playerIsInTheAir = false;
+                console.log('stop jump', playerY);
             }
-
         }
 
         //DRAWING
