--- a/program.html
+++ b/program.html
@@ -63,15 +63,20 @@
             window.requestAnimationFrame(mainLoop);
         }
 
-        //This dosent work yet
         function generateBushes() {
             var generateBushData = [];
             var bushX = 0;
-            for (var i = 0; i < 10; i++) {
+            while (bushX < (2 * CANVAS_WIDTH)) {
+                var bushImage;
+                if (Math.random() >= 0.5) {
+                    bushImage = bush1Image;
+                } else {
+                    bushImage = bush2Image;
+                }
                 generateBushData.push({
                     x: bushX,
                     y: 80 + Math.random() * 20,
-                    image: bush1Image
+                    image: bushImage
                 });
                 bushX += 150 + Math.random() * 200;
             }
