--- a/program.html
+++ b/program.html
@@ -187,6 +187,7 @@
                 updateRobots();
             }
         }
+        //comentar
 
         //robot robatics
         function updateRobots() {
