--- a/program.html
+++ b/program.html
@@ -26,7 +26,7 @@
         var ROBOT_HEIGHT = 139;
         var ROBOT_NR_ANIMATION_FRAMES = 9;
         var ROBOT_ANIMATION_SPEED = 5;
-        var ROBOT_X_SPEED = 4;
+        var ROBOT_X_SPEED = 1;
         var MIN_DISTANCE_BETWEEN_ROBOTS = 400;
         var MAX_DISTANCE_BETWEEN_ROBOTS = 1200;
         var MAX_ACTIVE_ROBOTS = 3;
@@ -35,6 +35,10 @@
         var BACKGROUND_WIDTH = 1000;
         var gameFrameCounter = 0;
         var GROUND_Y = 540;
+
+        var SCREENSHAKE_RADIUS = 16;
+
+        var PLAYER_MAX_HEALTH = 100;
 
         //SETUP
         var canvas = document.createElement('canvas');
@@ -57,6 +61,7 @@
             width: 50,
             height: 200
         };
+        var playerHealth = PLAYER_MAX_HEALTH;
 
         var robotImage = new Image();
         robotImage.src = 'visuals/AnimatedRobot.png'
@@ -72,7 +77,7 @@
             yOffset: 20,
             width: 50,
             height: 100
-        }
+        };
 
         var bush1Image = new Image();
         bush1Image.src = 'visuals/bush1.png';
@@ -87,6 +92,7 @@
         var playerYSpeed = 0;
         var spaceKeyIsPressed = false;
         var playerIsInTheAir = false;
+        var screenshake = false;
         var cameraX = 0;
         var cameraY = 0;
         var playerFrameNr = 0;
@@ -127,7 +133,7 @@
             draw();
             window.requestAnimationFrame(mainLoop);
 
-            // setTimeout(mainLoop, 1000);
+            //setTimeout(mainLoop, 30);
         }
 
         //PLAYER INPUT
@@ -182,28 +188,37 @@
                 if ((bushData[i].x - cameraX) < - CANVAS_WIDTH) {
                     bushData[i].x += (2 * CANVAS_WIDTH) + 150;
                 }
-
-                //Robot command
-                updateRobots();
             }
+
+            //Robot command
+            screenshake = false;
+            var playerTouchedARobot = updateRobots();
+            if (playerTouchedARobot) {
+                screenshake = true;
+            }
+
         }
-        //comentar
 
         //robot robatics
         function updateRobots() {
             //moving and animating robots
             for (var i = 0; i < robotData.length; i++) {
                 if (doesPlayerOverlapRobot(
+                    // x,y for player
                     playerX + playerCollisionRectangle.xOffset,
                     playerY + playerCollisionRectangle.yOffset,
+                    // collision rect for player
                     playerCollisionRectangle.width,
                     playerCollisionRectangle.height,
+                    // x,y pos for robot
                     robotData[i].x + robotCollisionRectangle.xOffset,
                     robotData[i].y + robotCollisionRectangle.yOffset,
+                    // collision rect for robot
                     robotCollisionRectangle.width,
-                    robotCollisionRectangle.heigth
+                    robotCollisionRectangle.height
                 )) {
-                    console.log('OUCHI!');
+                    playerTouchedARobot = true;
+                    console.log('OUCH!');
                 }
                 robotData[i].x -= ROBOT_X_SPEED;
                 if ((gameFrameCounter % ROBOT_ANIMATION_SPEED) === 0) {
@@ -218,12 +233,10 @@
             while (robotIndex < robotData.length) {
                 if (robotData[robotIndex].x < cameraX - ROBOT_WIDTH) {
                     robotData.splice(robotIndex, 1);
-                    console.log('I removed a robot!');
                 } else {
                     robotIndex += 1;
                 }
             }
-
             if (robotData.length < MAX_ACTIVE_ROBOTS) {
                 var lastRobotX = CANVAS_WIDTH;
                 var lastRobotX = 0;
@@ -237,6 +250,7 @@
                     frameNr: 0
                 });
             }
+            //return playerTouchedARobot;
         }
 
         function doesPlayerOverlapRobotAlongOneAxis(playerNearX, playerFarX, robotNearX, robotFarX) {
@@ -245,29 +259,40 @@
             var playerOverlapsEntireRobot = (playerNearX <= robotNearX) && (playerFarX >= robotFarX);
             return playerOverlapsNearRobotEdge || playerOverlapsFarRobotEdge || playerOverlapsEntireRobot;
         }
-        function doesPlayerOverlapRobot(playerX, playerY, PLAYER_WIDTH, PLAYER_HEIGHT, robotX, robotY, ROBOT_WIDTH, ROBOT_HEIGHT) {
+
+        function doesPlayerOverlapRobot(playerX, playerY, playerWidth, playerHeight, robotX, robotY, robotWidth, robotHeight) {
             var playerOverlapsRobotOnXAxis = doesPlayerOverlapRobotAlongOneAxis(
                 playerX,
-                playerX + PLAYER_WIDTH,
-                robotX + ROBOT_WIDTH,
+                playerX + playerWidth,
+                robotX,
+                robotX + robotWidth
             );
             var playerOverlapsRobotOnYAxis = doesPlayerOverlapRobotAlongOneAxis(
                 playerY,
-                playerY + PLAYER_HEIGHT,
+                playerY + playerHeight,
                 robotY,
-                robotY + ROBOT_HEIGHT
+                robotY + robotHeight
             );
             return playerOverlapsRobotOnXAxis && playerOverlapsRobotOnYAxis;
         }
 
         //DRAWING
         function draw() {
+            //Shake da screen
+            var shakenCameraX = cameraX;
+            var shakenCameraY = cameraY;
+
+            if (screenshake) {
+                shakenCameraX += (Math.random() - .5) * SCREENSHAKE_RADIUS;
+                shakenCameraY += (Math.random() - .5) * SCREENSHAKE_RADIUS;
+            }
+
             //Da sky
             c.fillStyle = 'LightSkyBlue';
             c.fillRect(0, 0, CANVAS_WIDTH, GROUND_Y - 40);
 
             //Da background
-            var backgroundX = - (cameraX % BACKGROUND_WIDTH);
+            var backgroundX = - (shakenCameraX % BACKGROUND_WIDTH);
             c.drawImage(backgroundImage, backgroundX, -210);
             c.drawImage(backgroundImage, backgroundX + BACKGROUND_WIDTH, -210);
 
@@ -277,16 +302,16 @@
 
             //Da bush
             for (var i = 0; i < bushData.length; i++) {
-                c.drawImage(bushData[i].image, bushData[i].x - cameraX, GROUND_Y - bushData[i].y - cameraY);
+                c.drawImage(bushData[i].image, bushData[i].x - shakenCameraX, GROUND_Y - bushData[i].y - shakenCameraY);
             }
 
             //Daftpunk
             for (var i = 0; i < robotData.length; i++) {
-                drawAnimatedSprite(robotData[i].x - cameraX, robotData[i].y - cameraY, robotData[i].frameNr, robotSpriteSheet);
+                drawAnimatedSprite(robotData[i].x - shakenCameraX, robotData[i].y - shakenCameraY, robotData[i].frameNr, robotSpriteSheet);
             }
 
             //drawing mr Nano
-            drawAnimatedSprite(playerX - cameraX, playerY - cameraY, playerFrameNr, playerSpriteSheet);
+            drawAnimatedSprite(playerX - shakenCameraX, playerY - shakenCameraY, playerFrameNr, playerSpriteSheet);
 
             //spite animator
             function drawAnimatedSprite(screenX, screenY, frameNr, spriteSheet) {
